fixed styling on accom page with new booking links (+1 squashed commit) Squashed commits: [7841ac3] added

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -324,6 +324,8 @@ table.hotel-rates {
     .room-rate {
         width: 20%;
     }
+
+    margin-bottom: 10px;
 }
 
 .sponsor-image-wrapper {
@@ -403,4 +405,11 @@ p.speaker {
 
 .speaker-pic {
     max-width: 140px;
+}
+
+.book-hotel {
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 85%;
+    font-weight: bold;
 }
